--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,13 @@ h6{
 }
 
 #nav-row{
-    background-color: lightblue;
+    background-color: #231f20;
 }
-    
+
 #misc-row{
-    background-color: lightgreen;
+    text-align: right;
+    background-color: #ffde00;
+    padding: 4px 0;
 }
 
 .container{
@@ -82,7 +84,7 @@ h6{
 #app-row>.container>.wrapper{
     float: right;
     /* background-color: greenyellow; */
-    width: 70%;
+    /* width: 85%; */
     height: 100%;
 }
 
@@ -161,4 +163,51 @@ nav>li>a:hover{
 #smi-container ul li ion-icon{
     font-size: 1.2rem;
     color: white;
+}
+
+#nav-row nav li{
+    float: left;
+}
+
+#nav-row nav li a{
+    position: relative;
+    display: inline-block;
+    padding: 15px;
+    color: white;
+}
+
+#nav-row nav li a:hover::after{
+    position: absolute;
+    display: block;
+    content: "";
+    border-top: 6px solid #ff9d1e;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 100%;
+}
+
+#nav-row nav li a:hover{
+    background-color: #ff9d1e;
+    color: black;
+    text-decoration: none;
+}
+
+#misc-row .btn{
+    display: inline-block;
+    height: 40px;
+    background-color: #107ece;
+    color: white;
+    border-bottom: 2px solid #0f027b;
+    padding: 0 10px;
+    text-transform: uppercase;
+    line-height: 40px;
+    border-radius: 4px;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+
+#misc-row .btn:hover{
+    background-color: #0865a9;
 }
